--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     </head>
     <body class="page-one">
       <h1>04.maio.2017</h1>
-      <div class="page-one-container">
+      <div class="tinder-box">
         <img class="img-page-one" src="images/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
         <div class="caption-page-one">
-          <h3>Maria Alice, 21</h3>
-          <p>📍 9.532 km away</p>
-          <p>Pseudo-cinéfila; Tenho sangue falso nas mãos com mais frequências do que gostaria de admitir.</p>
+          <h2 class="name-age"><strong>Maria Alice, 21</strong></h2>
+          <p class="caption-location">📍 9.532 km away</p>
+          <p class="caption-tinder">Pseudo-cinéfila; </p>
+          <p class="caption-tinder">Tenho sangue falso nas mãos com mais frequências do que gostaria de admitir.</p>
         </div>
       </div>
     </body>
