--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../stylesheet/index.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">  
     <title>04.05.2017</title>
     </head>
     <body class="page-one">
-      <h1>04.maio.2017</h1>
-      <div class="tinder-box">
-        <img class="img-page-one" src="images/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
-        <div class="caption-page-one">
-          <h2 class="name-age"><strong>Maria Alice, 21</strong></h2>
-          <p class="caption-location">📍 9.532 km away</p>
-          <p class="caption-tinder">Pseudo-cinéfila; </p>
-          <p class="caption-tinder">Tenho sangue falso nas mãos com mais frequências do que gostaria de admitir.</p>
+      <h1 class="data">04.maio.2017</h1>
+      <div class="tinder-container">
+        <div class="tinder-box">
+          <img class="img-page-one" src="images/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
+          <div class="caption-page-one">
+           <h2 class="name-age"><strong>Maria Alice, 21</strong></h2>
+           <p class="caption-location">📍 9.532 km away</p>
+           <p class="caption-tinder">Pseudo-cinéfila; </p>
+            <p class="caption-tinder">Tenho sangue falso nas mãos com mais frequências do que gostaria de admitir.</p>
         </div>
-      </div>
+        </div>
+      </div>  
     </body>
     </html>
