Add new classes

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../stylesheet/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">  
     <title>04.05.2017</title>
     </head>
     <body class="page-one">
       <h1 class="data">04.maio.2017</h1>
       <div class="tinder-container">
+        <img class="icon-settings" src="images/settings-icon.png" alt="Engrenagem">
+        <img class="icons-tinder" src="images/tinder-logo.png" alt="A palavra tinder em letras vermelhas">
+        <img class="icon-chat" src="images/chat-icon.png" alt="Dois balões de fala">
         <div class="tinder-box">
           <img class="img-page-one" src="images/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
           <div class="caption-page-one">
