Add url next page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <p class="caption-tinder">Tenho sangue falso nas mãos com mais frequências do que gostaria de admitir.</p>
         </div>
         </div>
+        <img class="reload" src="images/reload.png" alt="uma seta de reload laranja">
+        <img class="big-button" src="images/x.png" alt="um x vermelho">
+        <a href="deu-match/index.html"><img class="big-button" src="images/heart.png" alt="um coração verde"></a>
+        <a href="deu-match/index.html"><img class="super-like" href="deu-match/index.html" src="images/star.png" alt="uma estrela azul"></a>
       </div>  
     </body>
     </html>
