--- a/index.html
+++ b/index.html
@@ -8,25 +8,41 @@
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">  
     <title>04.05.2017</title>
     </head>
+
     <body class="page-one">
       <h1 class="data">04.maio.2017</h1>
-      <div class="tinder-container">
-        <img class="icon-settings" src="images/settings-icon.png" alt="Engrenagem">
-        <img class="icons-tinder" src="images/tinder-logo.png" alt="A palavra tinder em letras vermelhas">
-        <img class="icon-chat" src="images/chat-icon.png" alt="Dois balões de fala">
-        <div class="tinder-box">
-          <img class="img-page-one" src="images/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
-          <div class="caption-page-one">
-           <h2 class="name-age"><strong>Maria Alice, 21</strong></h2>
-           <p class="caption-location">📍 9.532 km away</p>
-           <p class="caption-tinder">Pseudo-cinéfila; </p>
+     <div class="tinder-container">
+       <img class="icon-settings" src="images/settings-icon.png" alt="Engrenagem">
+       <img class="icons-tinder" src="images/tinder-logo.png" alt="A palavra tinder em letras vermelhas">
+       <img class="icon-chat" src="images/chat-icon.png" alt="Dois balões de fala">
+         <div class="tinder-box">
+           <img class="img-page-one" src="images/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
+           <div class="caption-page-one">
+            <h2 class="name-age"><strong>Maria Alice, 21</strong></h2>
+            <p class="caption-location">📍 9.532 km away</p>
+            <p class="caption-tinder">Pseudo-cinéfila; </p>
             <p class="caption-tinder">Tenho sangue falso nas mãos com mais frequências do que gostaria de admitir.</p>
+           </div>
+         </div>
+
+      <div class="buttons">
+        <div class="small-button">
+          <img class="reload" src="images/reload.png" alt="uma seta de reload laranja">
         </div>
+
+        <div class="big-button">
+         <img class="b-button" src="images/x.png" alt="um x vermelho">
         </div>
-        <img class="reload" src="images/reload.png" alt="uma seta de reload laranja">
-        <img class="big-button" src="images/x.png" alt="um x vermelho">
-        <a href="deu-match/index.html"><img class="big-button" src="images/heart.png" alt="um coração verde"></a>
-        <a href="deu-match/index.html"><img class="super-like" href="deu-match/index.html" src="images/star.png" alt="uma estrela azul"></a>
-      </div>  
+
+        <div class="big-button" >
+         <a href="deu-match/index.html"><img class="b-button" src="images/heart.png" alt="um coração verde"></a>
+        </div>
+
+        <div class="small-button">
+         <a href="deu-match/index.html"><img class="super-like" href="deu-match/index.html" src="images/star.png" alt="uma estrela azul"></a>
+        </div>
+      </div>
+
+     </div>  
     </body>
-    </html>
+</html>
