--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <body class="page-one">
       <h1 class="data">04.maio.2017</h1>
      <div class="tinder-container">
-       <img class="icon-settings" src="images/settings-icon.png" alt="Engrenagem">
-       <img class="icons-tinder" src="images/tinder-logo.png" alt="A palavra tinder em letras vermelhas">
-       <img class="icon-chat" src="images/chat-icon.png" alt="Dois balões de fala">
+       <img class="icon-settings" src="images/images-tinder/settings-icon.png" alt="Engrenagem">
+       <img class="icons-tinder" src="images/images-tinder/tinder-logo.png" alt="A palavra tinder em letras vermelhas">
+       <img class="icon-chat" src="images/images-tinder/chat-icon.png" alt="Dois balões de fala">
          <div class="tinder-box">
-           <img class="img-page-one" src="images/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
+           <img class="img-page-one" src="images/images-tinder/page-one.JPG" alt="Maria fazendo pose com o ombro para frente, a cabeça inclinada para trás e o rosto, fazendo biquinho, para frente.">
            <div class="caption-page-one">
             <h2 class="name-age"><strong>Maria Alice, 21</strong></h2>
             <p class="caption-location">📍 9.532 km away</p>
@@ -26,19 +26,19 @@
          </div>
 
         <div class="small-button">
-          <img class="reload" src="images/reload.png" alt="uma seta de reload laranja">
+          <img class="reload" src="images/images-tinder/reload.png" alt="uma seta de reload laranja">
         </div>
 
         <div class="big-button">
-         <img class="b-button" src="images/x.png" alt="um x vermelho">
+         <img class="b-button" src="images/images-tinder/x.png" alt="um x vermelho">
         </div>
 
         <div class="big-button" >
-         <a href="deu-match/index.html"><img class="b-button" src="images/heart.png" alt="um coração verde"></a>
+         <a href="deu-match/index.html"><img class="b-button" src="images/images-tinder/heart.png" alt="um coração verde"></a>
         </div>
 
         <div class="small-button">
-         <a href="deu-match/index.html"><img class="super-like" href="deu-match/index.html" src="images/star.png" alt="uma estrela azul"></a>
+         <a href="deu-match/index.html"><img class="super-like" href="deu-match/index.html" src="images/images-tinder/star.png" alt="uma estrela azul"></a>
         </div>
 
      </div>  
