--- a/deu-match/index.html
+++ b/deu-match/index.html
@@ -10,7 +10,9 @@
 
     <body class="match">
       <div class="deu-match">
-
+        <img class="match-text" src="../images/images-match/match.png" alt="It's a match! escrito em letras brancas">
+        <img class="match-photo-will" src="../images/images-match/will-match.jpg" alt="Will deitado numa cadeira com um lago e montanhas de fundo">
+        <img class="match-photo-maria" src="../images/images-match/maria-match.JPG" alt="Maria de ladinho fazendo biquinho">      
       </div>
       
     </body>
