--- a/deu-match/index.html
+++ b/deu-match/index.html
@@ -11,8 +11,10 @@
     <body class="match">
       <div class="deu-match">
         <img class="match-text" src="../images/images-match/match.png" alt="It's a match! escrito em letras brancas">
+        <p class="match-phrase">You and Maria Alice have liked each other!</p>
         <img class="match-photo-will" src="../images/images-match/will-match.jpg" alt="Will deitado numa cadeira com um lago e montanhas de fundo">
         <img class="match-photo-maria" src="../images/images-match/maria-match.JPG" alt="Maria de ladinho fazendo biquinho">      
+        <p><a class="continue-button" href="../chat/index.html">SEND A MESSAGE</a></p>
       </div>
       
     </body>
