--- a/chat/index.html
+++ b/chat/index.html
@@ -18,7 +18,18 @@
     <div class="dots">
      <p class="menu-chat"></p>
      <p class="menu-chat"></p>
-     <p class="menu-chat"></p>    
+     <p class="menu-chat"></p>         
+    </div>
+   </div>
+
+   <div class="chat-body">
+     <p class="date-chat">Ontem</p>
+    <div class="first-message">
+        <p>Hey você!</p>
+    </div>
+      <p class="date-chat">Hoje</p>
+    <div class="first-answer">
+      <p>Desculpa demorar a responder, é que eu acabei de chegar de Amsterdã.</p>
     </div>
   </div>
 
