--- a/chat/index.html
+++ b/chat/index.html
@@ -23,16 +23,26 @@
    </div>
 
    <div class="chat-body">
-     <p class="date-chat">Ontem</p>
+     <p class="date-chat">Yesterday</p>
     <div class="first-message">
         <p>Hey você!</p>
     </div>
-      <p class="date-chat">Hoje</p>
+      <p class="date-chat">Today</p>
     <div class="first-answer">
       <p>Desculpa demorar a responder, é que eu acabei de chegar de Amsterdã.</p>
     </div>
-  </div>
+    <div class="first-message">
+      <p>Vida difícil, ein?!</p>
+    </div>
+   </div>
+    <div class="answer-box">
+      <a href="../photo-page/index.html"><img class="photo-button" src="../images/images-chat/camera.png"></a>
+      <p class="gif-button">GIF</p>
+     <div class="message-box">
+      <p>TYPE A MESSAGE <div class="send">SEND</div></p>
+     </div> 
+    </div> 
 
-    </body>
-
+  </body>
+</html>
 
