--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -5,5 +5,275 @@
     <link rel="stylesheet" href="../stylesheet/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
-    <title></title>
+    <title>Home</title>
   </head>
+
+  <body>
+    <div class="polaroid-container">
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/dia-dos-namorados.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/dia1.jpeg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/IMG_1317.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/cj.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/cj2.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/cj3.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/ags.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/arya.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/meio-ano.png">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/ano-novo.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/jan.png">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/jan2.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/jan3.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/fev1.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/fev2.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/fev3.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/mar.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr1.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr3.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr4.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr5.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr6.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr7.png">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr8.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr9.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr10.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr11.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr12.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr13.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr-14.png">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr14.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr-15.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr15.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr16.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr17.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr18.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/abr19.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/brega.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/1ano.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/jun1.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/jun2.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/jul.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/out.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/out2.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/dez.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/natal18.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/311-12-18.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b1.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b4.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b5.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/2anos.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b6.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b7.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b8.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b9.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/b10.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/3anos.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c1.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c2.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c3.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c4.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c5.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c6.jpeg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c7.jpeg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/c8.jpeg">
+      </div>
+
+    </div>
+  </body>
+</html>
