--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html class="body" lang="pt_BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../stylesheet/index.css" />
@@ -8,18 +8,15 @@
     <title>Home</title>
   </head>
 
-  <body>
+  <body class="body">
     <div class="polaroid-container">
+
       <div class="polaroid-frame">
         <img class="photo" src="../images/images-polaroid/dia-dos-namorados.jpg">
       </div>
 
       <div class="polaroid-frame">
         <img class="photo" src="../images/images-polaroid/dia1.jpeg">
-      </div>
-
-      <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/IMG_1317.jpg">
       </div>
 
       <div class="polaroid-frame">
@@ -80,10 +77,6 @@
 
       <div class="polaroid-frame">
         <img class="photo" src="../images/images-polaroid/abr1.jpg">
-      </div>
-
-      <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/abr3.jpg">
       </div>
 
       <div class="polaroid-frame">
@@ -171,10 +164,6 @@
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/jun2.jpg">
-      </div>
-
-      <div class="polaroid-frame">
         <img class="photo" src="../images/images-polaroid/jul.jpg">
       </div>
 
@@ -243,6 +232,14 @@
       </div>
 
       <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/imagem-01.jpg">
+      </div>
+
+      <div class="polaroid-frame">
+        <img class="photo" src="../images/images-polaroid/imagem-02.jpg">
+      </div>
+
+      <div class="polaroid-frame">
         <img class="photo" src="../images/images-polaroid/c1.jpg">
       </div>
 
@@ -275,5 +272,8 @@
       </div>
 
     </div>
+
+   <footer class="footer"><img class="instax" src="../images/images-polaroid/photo-cam.png"></footer>
+
   </body>
 </html>
