--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body class="body">
+    <img class="kombi" src="../images/images-polaroid/kombi.png">
     <div class="polaroid-container">
 
       <div class="polaroid-frame">
