Add Kombi Animation

--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -9,7 +9,10 @@
   </head>
 
   <body class="body">
-    <img class="kombi" src="../images/images-polaroid/kombi.png">
+    <button class="kombi-animator">
+     <img class="kombi" src="../images/images-polaroid/kombi.png">
+    </button>
+
     <div class="polaroid-container">
 
       <div class="polaroid-frame">
