--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -14,9 +14,10 @@
     </button>
 
     <div class="polaroid-container">
-
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/dia-dos-namorados.jpg">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/dia-dos-namorados.jpg">
+        </div>  
       </div>
 
       <div class="polaroid-frame">
