--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -21,259 +21,387 @@
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/dia1.jpeg">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/dia1.jpeg">
+        </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/cj.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/cj2.jpg">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/cj2.jpg">
+        </div>
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/cj3.jpg">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/cj3.jpg">
+        </div>
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/ags.jpg">
+        <div class="fade-photo"> 
+         <img class="photo" src="../images/images-polaroid/ags.jpg">
+        </div>
+      </div>  
+
+      <div class="polaroid-frame">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/arya.jpg">
+        </div>
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/arya.jpg">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/meio-ano.png">
+        </div>
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/meio-ano.png">
+        <div class="fade-photo">
+         <img class="photo" src="../images/images-polaroid/ano-novo.jpg">
+        </div>
       </div>
 
       <div class="polaroid-frame">
-        <img class="photo" src="../images/images-polaroid/ano-novo.jpg">
-      </div>
-
-      <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jan.png">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jan2.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jan3.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/fev1.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/fev2.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/fev3.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/mar.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr1.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr4.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr5.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr6.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr7.png">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr8.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr9.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr10.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr11.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr12.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr13.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr-14.png">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr14.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr-15.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr15.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr16.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr17.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr18.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/abr19.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/brega.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/1ano.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jun1.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/jul.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/out.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/out2.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/dez.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/natal18.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/311-12-18.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b1.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b4.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b5.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/2anos.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b6.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b7.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b8.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b9.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/b10.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/3anos.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/imagem-01.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/imagem-02.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c1.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c2.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c3.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c4.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c5.jpg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c6.jpeg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c7.jpeg">
+       </div>
       </div>
 
       <div class="polaroid-frame">
+       <div class="fade-photo">
         <img class="photo" src="../images/images-polaroid/c8.jpeg">
+       </div>
       </div>
 
     </div>
