--- a/photo-page/index.html
+++ b/photo-page/index.html
@@ -5,13 +5,25 @@
     <link rel="stylesheet" href="../stylesheet/index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=New+Tegomin&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">">
     <title>Home</title>
   </head>
 
   <body class="body">
-    <button class="kombi-animator">
-     <img class="kombi" src="../images/images-polaroid/kombi.png">
-    </button>
+
+    <div class="kombi-container">
+     <button class="kombi-animator">
+      <img class="kombi" src="../images/images-polaroid/kombi.png">
+     </button> 
+      <p class="kombi-text">Home</p>
+      <p class="kombi-text-1">is</p>
+      <p class="kombi-text-2"> wherever</p>
+      <p class="kombi-text-3"> I'm </p>
+      <p class="kombi-text-4">with</p>
+      <p class="kombi-text-5"> you</p>
+      <p class="kombi-text-7">...</p>
+    </div>
 
     <div class="polaroid-container">
       <div class="polaroid-frame">
