--- a/chat/index.html
+++ b/chat/index.html
@@ -39,7 +39,7 @@
       <a href="../photo-page/index.html"><img class="photo-button" src="../images/images-chat/camera.png"></a>
       <p class="gif-button">GIF</p>
      <div class="message-box">
-      <p>TYPE A MESSAGE <div class="send">SEND</div></p>
+      <p>Add 4 years of memories <div class="send">SEND</div></p>
      </div> 
     </div> 
 
